--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rauljuarez",
+  "name": "rauljrz",
   "version": "1.0.0",
   "description": "My personal NPM business card",
   "main": "./index.js",
@@ -19,7 +19,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/rauljrz/rauljuarez.git"
+    "url": "git+https://github.com/rauljrz/rauljrz_card.git"
   },
   "keywords": [
     "NPM",
@@ -30,7 +30,7 @@
   "author": "Raúl Juárez",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/rauljrz/rauljuarez/issues"
+    "url": "https://github.com/rauljrz/rauljrz_card/issues"
   },
-  "homepage": "https://github.com/rauljrz/rauljuarez#readme"
+  "homepage": "https://github.com/rauljrz/rauljrz_card#readme"
 }
